--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  image_picker: ^0.6.7+4
+  firebase_auth: ^0.16.0
+  cloud_firestore: ^0.13.5
+  firebase_storage: ^3.1.5
+  flutter_spinkit: ^4.1.2+1
+  fluttertoast: ^4.0.1
 
 dev_dependencies:
   flutter_test:
