--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_storage: ^3.1.5
   flutter_spinkit: ^4.1.2+1
   fluttertoast: ^4.0.1
+  email_validator: ^1.0.4
 
 dev_dependencies:
   flutter_test:
